--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+html,body,#root{
+  margin:0;
+  padding:0;
+  height: 100%;
+  overflow: auto;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
